# poros

./: .gitignore  main.py  plot.ipynb  pyproject.toml  pyviz_knowledge_network.html  temp.ipynb
