[project]
name = "poros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dask>=2025.7.0",
    "datashader>=0.18.2",
    "dspy>=2.6.27",
    "holoviews>=1.21.0",
    "ipykernel>=6.30.1",
    "jupyter-bokeh>=4.0.5",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy==2.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "selenium>=4.34.2",
]
